第二次提交SSM整合

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,11 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
-
+    <!--缓存-->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-ehcache</artifactId>
+      <version>1.0.0</version>
+    </dependency>
   </dependencies>
 </project>
